Update manifest 3.4.1 && update_info.html

--- a/app/update_info.html
+++ b/app/update_info.html
@@ -13,7 +13,10 @@
 	<h1 id="title"><strong>YouTube</strong> Auto Like</h1>
 	<p>What's new :</p>
 	<ul>
-		<li>Update to new Youtube layout. Thank you<a href="https://github.com/Taknok/youtube-auto-like/issues/54">NexusDarkshade</a><a href="https://github.com/Taknok/youtube-auto-like/issues/50">#50</a> !</li>
+		<li>Update to new Youtube layout. Thank you <a href="https://github.com/Taknok/youtube-auto-like/issues/54">NexusDarkshade</a> !</li>
+	</ul>
+	<ul>
+		<li>Hot fix since 3.4.0 breaks for many users. Thank you Fraeksn</li>
 	</ul>
 	<p>Feel free to report any bug on <a id="report-link" href="https://github.com/Taknok/youtube-auto-like">Github</a>.</p>
 	<div id="links">
