Update manifest to 3.4.2 & update_info.html

--- a/app/update_info.html
+++ b/app/update_info.html
@@ -18,6 +18,9 @@
 	<ul>
 		<li>Hot fix since 3.4.0 breaks for many users. Thank you Fraeksn</li>
 	</ul>
+	<ul>
+		<li>Fix youtube full screen issue. Thank you <a href="https://github.com/Taknok/youtube-auto-like/issues/56">Blagatt</a> !</li>
+	</ul>
 	<p>Feel free to report any bug on <a id="report-link" href="https://github.com/Taknok/youtube-auto-like">Github</a>.</p>
 	<div id="links">
 		Feel free to grab me a beer 😊 <a id="donate-link" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=F8J6T6WHJBRAA" title="Donate" target="_blank">Donate</a>
