--- a/src/options.html
+++ b/src/options.html
@@ -1,124 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>YouTube Auto Like</title>
-    <meta charset="UTF-8" />
-    <link href="https://fonts.googleapis.com/css?family=Titillium+Web:400,700" rel="stylesheet" />
-    <link href="css/options.css" rel="stylesheet" />
-  </head>
-  <body>
-    <header class="header">
-      <h1 class="title">YouTube <strong>Auto Like</strong> <span class="version" hidden></span></h1>
-      <div class="status"></div>
-    </header>
 
-    <div class="update-notice" hidden></div>
+<head>
+  <title>YouTube Auto Like</title>
+  <meta charset="UTF-8" />
+  <link href="https://fonts.googleapis.com/css?family=Titillium+Web:400,700" rel="stylesheet" />
+  <link href="css/options.css" rel="stylesheet" />
+</head>
 
-    <div class="reload-notice">__MSG_reloadNotice__</div>
+<body>
+  <header class="header">
+    <h1 class="title">YouTube <strong>Auto Like</strong> <span class="version" hidden></span></h1>
+    <div class="status"></div>
+  </header>
 
-    <div id="options-wrap">
-      <form id="options-form" enctype="multipart/form-data">
-        <fieldset class="form-group">
-          <legend class="form-group-title">__MSG_optLikeWhatTitle__</legend>
+  <div class="update-notice" hidden></div>
 
-          <label class="option-group">
-            <input type="radio" name="like_what" value="all" /> __MSG_optLikeAll__
-          </label>
+  <div class="reload-notice">__MSG_reloadNotice__</div>
 
-          <label class="option-group">
-            <input type="radio" name="like_what" value="subscribed" /> __MSG_optLikeSub__
-          </label>
-        </fieldset>
+  <div id="options-wrap">
+    <form id="options-form" enctype="multipart/form-data">
+      <fieldset class="form-group">
+        <legend class="form-group-title">__MSG_optLikeWhatTitle__</legend>
 
-        <fieldset class="form-group">
-          <legend class="form-group-title">__MSG_optLikeWhenTitle__</legend>
+        <label class="option-group">
+          <input type="radio" name="like_what" value="all" /> __MSG_optLikeAll__
+        </label>
 
-          <label class="option-group">
-            <input type="radio" name="like_when" value="instantly" /> __MSG_optLikeInstant__
-          </label>
+        <label class="option-group">
+          <input type="radio" name="like_what" value="subscribed" /> __MSG_optLikeSub__
+        </label>
+      </fieldset>
 
-          <div class="option-group">
-            <input type="radio" name="like_when" value="timed" />
-            <input
-              type="number"
-              name="like_when_minutes"
-              value="2"
-              placeholder="2"
-              min="0"
-              max="100"
-              step="0.5"
-            />
-            <label title="Or at the end of the video, if shorter.">__MSG_optLikeTimed__</label>
-          </div>
+      <fieldset class="form-group">
+        <legend class="form-group-title">__MSG_optLikeWhenTitle__</legend>
 
-          <div class="option-group">
-            <input id="when-percent" type="radio" name="like_when" value="percent" />
-            <label for="when-percent">
-              <input
-                type="number"
-                name="like_when_percent"
-                value="50"
-                placeholder="50"
-                min="0"
-                max="100"
-                step="5"
-              />
-              __MSG_optLikePercent__
-						</label>
-          </div>
-        </fieldset>
+        <label class="option-group">
+          <input type="radio" name="like_when" value="instantly" /> __MSG_optLikeInstant__
+        </label>
 
-        <div class="form-group form-group__no-title">
-          <label>
-						<input type="checkbox" name="disabled" value="yes" /> __MSG_optDisable__
-					</label>
+        <div class="option-group">
+          <input type="radio" name="like_when" value="timed" />
+          <input type="number" name="like_when_minutes" value="2" placeholder="2" min="0" max="100" step="0.5" />
+          <label title="Or at the end of the video, if shorter.">__MSG_optLikeTimed__</label>
         </div>
-      </form>
-    </div>
-    <div>
-      <p>
-        <span style="opacity: 0.9">Hours of development and testing go into maintaining this extension. If you feel it's worth a couple bucks, you can <a href="https://www.buymeacoffee.com/austen" target="_blank"><strong>buy my cats a snack</strong></a>. I really appreciate it. &lt;3</span>
-      </p>
-    </div>
-    <div id="links">
-      <a
-        id="report-link"
-        href="https://github.com/austencm/youtube-auto-like/issues/new?labels=bug"
-        target="_blank"
-        title="__MSG_linkReport__"
-        data-i18n
-      >
-				⚠️
-			</a>
-      <a
-        id="github-link"
-        href="https://github.com/austencm/youtube-auto-like"
-        title="GitHub"
-        target="_blank"
-      >
-        <svg>
-          <use xlink:href="#icon-git"></use>
-        </svg>
-      </a>
-      <a
-        id="donate-link"
-        href="https://www.buymeacoffee.com/austen"
-        target="_blank"
-        title="__MSG_linkDonate__"
-        data-i18n
-      >
-				🐈
-			</a>
-    </div>
 
-    <script src="options.js"></script>
+        <div class="option-group">
+          <input id="when-percent" type="radio" name="like_when" value="percent" />
+          <label for="when-percent">
+            <input type="number" name="like_when_percent" value="50" placeholder="50" min="0" max="100" step="5" />
+            __MSG_optLikePercent__
+          </label>
+        </div>
+      </fieldset>
 
-    <svg xmlns="http://www.w3.org/2000/svg" style="display: none">
-      <symbol id="icon-git" viewbox="0 0 512 512">
-        <path
-          d="m200 304c2 7 3 15 3 22c0 15-4 31-15 43c-5 6-12 9-20 9c-15 0-27-14-31-30c-3-7-4-15-4-22c0-15 4-31 16-43c5-6 12-9 19-9c16 0 28 14 32 30z m175 0c2 7 3 15 3 22c0 15-4 31-15 43c-5 6-12 9-20 9c-15 0-26-14-31-30c-2-7-4-15-4-22c0-15 5-31 16-43c5-6 12-9 19-9c16 0 28 14 32 30z m47 22c0-44-27-79-70-79c-7 0-25 2-53 6c-13 2-28 3-43 3c-16 0-30-1-43-3c-28-4-45-6-53-6c-43 0-70 35-70 79c0 32 13 56 30 70c18 14 48 22 72 25c12 1 26 2 41 2l46 0c30 0 52-2 79-10c26-9 44-21 55-45c6-12 9-26 9-42z m62-48c0 38-6 68-17 90c-14 29-41 49-67 60c-27 11-67 18-94 19c-14 1-29 2-46 2c-28 0-48-1-79-5c-30-3-54-11-79-22c-25-11-45-30-57-54c-11-22-17-52-17-90c0-43 13-79 38-108c-5-16-8-31-8-47c0-21 5-41 14-60c40 0 65 14 104 45c27-6 55-10 84-10c27 0 53 4 77 9c38-30 64-44 103-44c9 19 14 39 14 60c0 16-3 31-8 46c25 29 38 65 38 109z"
-        ></path>
-      </symbol>
-    </svg>
-  </body>
+      <div class="form-group form-group__no-title">
+        <label>
+          <input type="checkbox" name="disabled" value="yes" /> __MSG_optDisable__
+        </label>
+      </div>
+    </form>
+  </div>
+  <div>
+    <p>
+      <span style="opacity: 0.9">Hours of development and testing go into maintaining this extension. If you feel it's
+        worth a couple bucks, you can <a href="https://www.buymeacoffee.com/austen" target="_blank"><strong>buy my cats
+            a snack</strong></a>. I really appreciate it. &lt;3</span>
+    </p>
+  </div>
+  <div id="links">
+    <a id="report-link" href="https://github.com/austencm/youtube-auto-like/issues/new?labels=bug" target="_blank"
+      title="__MSG_linkReport__" data-i18n>
+      ⚠️
+    </a>
+    <a id="github-link" href="https://github.com/austencm/youtube-auto-like" title="GitHub" target="_blank">
+      <svg>
+        <use xlink:href="#icon-git"></use>
+      </svg>
+    </a>
+    <a id="donate-link" href="https://www.buymeacoffee.com/austen" target="_blank" title="__MSG_linkDonate__" data-i18n>
+      🐈
+    </a>
+  </div>
+
+  <script src="options.js"></script>
+
+  <svg xmlns="http://www.w3.org/2000/svg" style="display: none">
+    <symbol id="icon-git" viewbox="0 0 512 512">
+      <path
+        d="m200 304c2 7 3 15 3 22c0 15-4 31-15 43c-5 6-12 9-20 9c-15 0-27-14-31-30c-3-7-4-15-4-22c0-15 4-31 16-43c5-6 12-9 19-9c16 0 28 14 32 30z m175 0c2 7 3 15 3 22c0 15-4 31-15 43c-5 6-12 9-20 9c-15 0-26-14-31-30c-2-7-4-15-4-22c0-15 5-31 16-43c5-6 12-9 19-9c16 0 28 14 32 30z m47 22c0-44-27-79-70-79c-7 0-25 2-53 6c-13 2-28 3-43 3c-16 0-30-1-43-3c-28-4-45-6-53-6c-43 0-70 35-70 79c0 32 13 56 30 70c18 14 48 22 72 25c12 1 26 2 41 2l46 0c30 0 52-2 79-10c26-9 44-21 55-45c6-12 9-26 9-42z m62-48c0 38-6 68-17 90c-14 29-41 49-67 60c-27 11-67 18-94 19c-14 1-29 2-46 2c-28 0-48-1-79-5c-30-3-54-11-79-22c-25-11-45-30-57-54c-11-22-17-52-17-90c0-43 13-79 38-108c-5-16-8-31-8-47c0-21 5-41 14-60c40 0 65 14 104 45c27-6 55-10 84-10c27 0 53 4 77 9c38-30 64-44 103-44c9 19 14 39 14 60c0 16-3 31-8 46c25 29 38 65 38 109z">
+      </path>
+    </symbol>
+  </svg>
+</body>
+
 </html>
